# ndjson-gen

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
src/: generate.rs  lib.rs  main.rs
tests/: integration_test.rs
