[package]
name = "ndjson-gen"
version = "0.1.0"
edition = "2021"
description = "Generate NDJSON files of a specified size with realistic fake data"
license = "MIT"
repository = "https://github.com/jlcoulter/ndjson-gen"
readme = "README.md"
documentation = "https://docs.rs/ndjson-gen"
keywords = ["ndjson", "json", "generator", "fake-data", "benchmark"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fake = { version = "4", features = ["derive"] }
rand = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"