[package]
name = "ndjson-gen"
version = "0.1.0"
edition = "2021"
description = "Generate NDJSON files of a specified size with realistic fake data"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
fake = { version = "4", features = ["derive"] }
rand = "0.9"
openapiv3 = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"